# timesformer-shoplifting

./: .gitignore  README.md  main.py  pyproject.toml
src/: process_and_standarize_data.py  timesformer_main.py  train.py
src/timesformer_shoplifting/: model_utils.py  timesformer_main.py  train.py
src/timesformer_shoplifting/dataset/: dataset.py
src/timesformer_shoplifting/inference/: __init__.py  cleanup_and_export.py  evaluate.py  plot_auc.py
src/timesformer_shoplifting/models/: model_utils.py
src/timesformer_shoplifting/preprocessing/: process_and_standardize_data.py
src/timesformer_shoplifting/training/: __init__.py  find_max_batch_size.py  train.py
