[project]
name = "timesformer-shoplifting"
version = "0.1.0"
description = "Fine tuning TimeSFormer for binary shoplifting classification"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "decord>=0.6.0",
    "evaluate>=0.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.9,<3.0",
    "torchvision>=0.24,<0.25",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}